<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.luka.travel.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_countryDetails"
            app:destination="@id/countryDetails"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.luka.travel.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.luka.travel.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/countryDetails"
        android:name="com.luka.travel.ui.country_details.CountryDetailsFragment"
        android:label="country_details_fragment"
        tools:layout="@layout/country_details_fragment" />
</navigation>
