<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/country_details_background"
        tools:context=".ui.country_details.CountryDetailsFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_back"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="1dp"
            android:alpha="0.5"
            android:background="@drawable/country_details_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back_arrow"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_back_" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="579dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_back">

            <TextView
                android:id="@+id/tv_country_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="Kenya"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_country_region"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_country_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="Africa"
                android:textColor="@color/white"
                android:textSize="16sp"

                app:layout_constraintBottom_toTopOf="@+id/tv_destination_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_name" />

            <TextView
                android:id="@+id/tv_destination_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/roboto_slab_light"
                android:text="@string/destination_desc"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_region" />

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_destination_desc">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/liked_image_list"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_user_profile_image" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:cardBackgroundColor="#979797"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.934"
                        app:layout_constraintStart_toEndOf="@+id/liked_image_list"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="start"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cardView2"
                        app:layout_constraintStart_toEndOf="@+id/liked_image_list"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_liked_users"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:text="@string/dummy_liked_users"
                            android:textColor="@color/white"

                            tools:layout_conversion_absoluteHeight="19dp"
                            tools:layout_conversion_absoluteWidth="115dp"
                            tools:layout_editor_absoluteX="184dp"
                            tools:layout_editor_absoluteY="416dp" />

                        <TextView
                            android:id="@+id/tv_and_others_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/dummy_and_a_number_others"
                            android:textColor="@color/white"
                            android:textSize="12sp"

                            tools:layout_conversion_absoluteHeight="16dp"
                            tools:layout_conversion_absoluteWidth="128dp"
                            tools:layout_editor_absoluteX="178dp"
                            tools:layout_editor_absoluteY="435dp" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="262dp"
                android:layout_marginTop="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

                <TextView
                    android:id="@+id/tv_places_to_visit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="Places to visit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyler_image_destination_slide"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_places_to_visit"
                    tools:listitem="@layout/item_place_to_visit" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
